Fix rich descriptions a bit more

--- a/style.css
+++ b/style.css
@@ -118,6 +118,14 @@ body {
 	background: #cccccc;
 }
 
+.expanded xml li:nth-child(even) {
+	background: initial;
+}
+
+xml p {
+	margin: initial;
+}
+
 .expanded {
 	border: solid #888888 !important;
 }
