--- a/style.css
+++ b/style.css
@@ -119,11 +119,11 @@ body {
 	background: #cccccc;
 }
 
-.expanded xml li:nth-child(even) {
+.expanded li:nth-child(even) {
 	background: initial;
 }
 
-xml p {
+.expanded p {
 	margin: initial;
 }
 
